[tool.poetry]
name = "image-caption"
version = "0.1.0"
description = ""
authors = ["yusuke <ritchie.#######@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
salesforce-lavis = "^1.0.2"
pydantic = "^2.8.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
